# django-datatables

./: .env  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  requirements.txt  run_tests.sh  setup.cfg  setup.py  test_build.sh  tox.ini
django_datatables/: column.py  datatable.py  excel.py  mixins.py  urls.py
django_datatables/templates/django_datatables/: table.html
src/django_datatables/: column.py  datatable.py  datatable_meta.py  mixins.py  urls.py  views.py
src/django_datatables/templates/django_datatables/: table.html
tests/: db.sqlite3  pytest.ini  test_datatables.py  views.py
tests/conf/: settings.py  urls.py
tests/sample/: apps.py  forms.py  models.py  views.py  views_sample.py
tests/sample/tests/: test_views.py
tests/templates/: base.html  edit.html  main.html
