[metadata]
name = classy-django-datatables
version = 1.0.1
summary = Create datatables as classes in django.
author = Stephen Mitchell, Patrick Coronel
author-email = stephen@echodot.com
home-page = https://github.com/scuml/django-datatables

requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6


[options]
zip_safe = true
python_requires='>=3.6'


[facilities]
auto-version = true
auto-dependencies = true
auto-description = true
auto-packages = true
auto-package-data = true
auto-tests = true
