
[metadata]
name = classy-django-datatables
version = 1.0.3
summary = Create datatables as classes in django.
description-file =
    README.md
    CHANGELOG.md
author = Stephen Mitchell, Patrick Coronel
author-email = stephen@echodot.com
home-page = https://github.com/scuml/django-datatables

requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
extra_files =
    README.md
    CHANGELOG.md
    LICENSE


[options]
zip_safe = true
include_package_data = true
packages = find:
package_dir =
    =src
python_requires='>=3.6'
install_requires =
    django>=2
    pyquerystring

[options.packages.find]
where = src